[gd_scene load_steps=17 format=3 uid="uid://beilujwdvgdxi"]

[ext_resource type="Script" uid="uid://ccmrbvg4nmp1v" path="res://scripts/claw_machine.gd" id="1_ruogf"]
[ext_resource type="Texture2D" uid="uid://d3eavfi3whhk4" path="res://recursos/assets/clawMachine1.png" id="2_fehfg"]
[ext_resource type="Texture2D" uid="uid://ct11qmmwfkc52" path="res://recursos/assets/clawMachine2.png" id="3_qcsjy"]
[ext_resource type="Texture2D" uid="uid://fwaah7uhhqt2" path="res://recursos/assets/clawMachine3.png" id="4_d441d"]
[ext_resource type="Texture2D" uid="uid://yybgghy1125d" path="res://recursos/assets/clawMachine4.png" id="5_0lum0"]
[ext_resource type="Texture2D" uid="uid://bx53y3ixjipyn" path="res://recursos/assets/clawMachine5.png" id="6_fhrpx"]
[ext_resource type="Texture2D" uid="uid://doyhxjxk2upkf" path="res://recursos/assets/clawMachine6.png" id="7_2xrg4"]
[ext_resource type="Texture2D" uid="uid://d1onorwvenrnq" path="res://recursos/assets/clawMachine7.png" id="8_xwle5"]
[ext_resource type="Texture2D" uid="uid://bfasidxvgtnvb" path="res://recursos/assets/clawMachine8.png" id="9_18i1h"]
[ext_resource type="Texture2D" uid="uid://d18q6v2yv64ij" path="res://recursos/assets/clawMachine9.png" id="10_grgqw"]
[ext_resource type="Texture2D" uid="uid://nbg42778nghd" path="res://recursos/assets/clawMachine10.png" id="11_py7bk"]
[ext_resource type="Texture2D" uid="uid://cg5lyqlj1ta4i" path="res://recursos/assets/clawMachine11.png" id="12_8ymeh"]
[ext_resource type="Texture2D" uid="uid://bswgo5vgwe3p3" path="res://recursos/assets/clawMachine12.png" id="13_icd0a"]
[ext_resource type="Texture2D" uid="uid://duaugprwdlgtw" path="res://recursos/assets/clawMachine13.png" id="14_c02hh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ncqey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fehfg")
}, {
"duration": 1.0,
"texture": ExtResource("2_fehfg")
}],
"loop": true,
"name": &"inicio",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qcsjy")
}, {
"duration": 1.0,
"texture": ExtResource("4_d441d")
}, {
"duration": 1.0,
"texture": ExtResource("5_0lum0")
}, {
"duration": 1.0,
"texture": ExtResource("6_fhrpx")
}, {
"duration": 1.0,
"texture": ExtResource("7_2xrg4")
}, {
"duration": 1.0,
"texture": ExtResource("8_xwle5")
}, {
"duration": 1.0,
"texture": ExtResource("9_18i1h")
}, {
"duration": 1.0,
"texture": ExtResource("10_grgqw")
}, {
"duration": 1.0,
"texture": ExtResource("11_py7bk")
}, {
"duration": 1.0,
"texture": ExtResource("12_8ymeh")
}, {
"duration": 1.0,
"texture": ExtResource("13_icd0a")
}, {
"duration": 1.0,
"texture": ExtResource("14_c02hh")
}],
"loop": false,
"name": &"interact",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yoyh8"]
radius = 343.0
height = 840.0

[node name="ClawMachine" type="Area2D"]
collision_mask = 3
script = ExtResource("1_ruogf")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ncqey")
animation = &"inicio"

[node name="AreaDeInteracao" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3, 126)
shape = SubResource("CapsuleShape2D_yoyh8")

[node name="DropLocationHeal" type="Marker2D" parent="."]
position = Vector2(-92, 258)

[node name="DropLocationBuff" type="Marker2D" parent="."]
position = Vector2(40, 266)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
